<resources>
    <string name="app_name">Jump</string>
    <string name="title">Not Jump</string>
    <string name="startButton">Start</string>
    <string name="optionButton">Options</string>
    <string name="backButton">Back</string>
    <string name="darkMode">Dark Mode</string>
    <string name="gamePause">Game Paused</string>
    <string name="resume">Resume</string>
    <string name="lines">Disable Lines</string>
</resources>
